# credential-extractor

./: .editorconfig  .gitignore  Cargo.toml  build.rs  package.json  release_build.txt  tsconfig.json
.cargo/: config.toml
.github/workflows/: build.yml
lib/: index.ts
src/: browsers.rs  error.rs  lib.rs  utils.rs
src/browsers/: mod.rs  safari_keychain.rs
src/browsers/chromium/: browsers.rs  linux.rs  macos.rs  mod.rs  win.rs
src/browsers/firefox/: browsers.rs  logins.rs  mod.rs
src/cryptos/: mod.rs  win.rs
tests/: browser-search.test.js
