[package]
name = "credential-extractor"
version = "0.0.1"
authors = ["rumblefrog <contact@zhenyangli.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
dirs = "3"
thiserror = "1"

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]

[dependencies.neon]
git = "https://github.com/neon-bindings/neon"
branch = "main"
default-features = false
features = ["napi-6", "event-queue-api", "try-catch-api"]


## Windows dependencies

[target.'cfg(windows)'.dependencies]
windows = "0.19"
aes-gcm = "0.9"
base64 = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.build-dependencies]
windows = "0.19"

[target.'cfg(macos)'.dependencies]
aes = "0.7"
block-modes = "0.8"
security-framework = "2.4"

[profile.release]
lto = "fat"
codegen-units = 1
