[package]
name = "credential-extractor"
version = "1.0.1"
authors = ["rumblefrog <contact@zhenyangli.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
dirs = "3"
thiserror = "1"
serde_json = "1"
der-parser = "6"
rust-crypto = "0.2"
aes = "0.7"
des = "0.7"
base64 = "0.13"
block-modes = "0.8"
ring = "0.16"
sha1 = "0.6.0"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]

[dependencies.neon]
git = "https://github.com/neon-bindings/neon"
branch = "main"
default-features = false
features = ["napi-6", "event-queue-api", "try-catch-api"]


## Windows dependencies

[target.'cfg(windows)'.dependencies]
windows = "0.19"
aes-gcm = "0.9"

[target.'cfg(target_os = "windows")'.build-dependencies]
windows = "0.19"

## Macos dependencies

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.4"

# Linux dependencies
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = "2"

[profile.release]
lto = "fat"
codegen-units = 1
